--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ server.address=0.0.0.0
 app.frontend.url=https://lightyellow-jaguar-749540.hostingersite.com
 
 #Oauth2 Client-id & Secret:
-spring.security.oauth2.client.registration.google.client-id=621141345296-q7amvlopet122l12vfc8qhchcgdbj0cf.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 #spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/netbankingappbyAgastya/api/v1/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.redirect-uri=http://netbankingbyagastya.redirectme.net:8080/netbankingappbyAgastya/api/v1/login/oauth2/code/google
@@ -20,9 +20,8 @@ spring.security.oauth2.client.registration.github.client-secret=abcdefg
 
 
 #JPA configuration:
-spring.datasource.url=jdbc:mysql://srv1950.hstgr.io:3306/u531891961_NetBankingApp?useSSL=false&serverTimezone=UTC
-spring.datasource.username=u531891961_admin
-spring.datasource.password=NetbankingbyAgastya@1234
+spring.datasource.url=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
